// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alpine lastblock can get blockNum 1`] = `
{
  "data": {
    "result": "50",
  },
  "debug": undefined,
  "jobRunID": "1",
  "result": "50",
  "statusCode": 200,
}
`;

exports[`alpine tvl can get tvl 1`] = `
{
  "data": {
    "result": "5000",
  },
  "debug": undefined,
  "jobRunID": "1",
  "result": "5000",
  "statusCode": 200,
}
`;

